Fix mobile spacing issue

--- a/open-data/src/modules/social-aside/css/global.scss
+++ b/open-data/src/modules/social-aside/css/global.scss
@@ -6,7 +6,6 @@
     padding: 0 0 pxToRem(30) 0;
     float: left;
     width: 100%;
-    margin: 0 pxToRem(-15);
 
     .module-heading {
         border :0;
